--- a/service.html
+++ b/service.html
@@ -244,13 +244,13 @@
                                 <div class="bg-secondary btn-xl-square mx-auto" style="width: 100px; height: 100px;">
                                     <i class="fas fa-file-invoice-dollar text-primary fa-4x"></i>
                                 </div>
-                                <a href="#" class="d-block fs-4 my-4">Virtual Design & Build</a>
+                                <a href="#" class="d-block fs-4 my-4">Supply Management</a>
                                 <p class="text-white mb-4">AAR Enterprises designs with passion and engineers with precision. Bold, lasting!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
                                 <div class="d-flex align-items-center justify-content-start ps-4 w-100">
-                                    <h4>Virtual Design & Build</h4>
+                                    <h4>Supply Management</h4>
                                 </div>
                                 <div class="btn-xl-square bg-secondary p-4" style="width: 80px; height: 80px;">
                                     <i class="fas fa-file-invoice-dollar text-primary fa-2x"></i>
@@ -267,13 +267,13 @@
                                 <div class="bg-secondary btn-xl-square mx-auto" style="width: 100px; height: 100px;">
                                     <i class="fas fa-cogs text-primary fa-4x"></i>
                                 </div>
-                                <a href="#" class="d-block fs-4 my-4">Preconstruction</a>
+                                <a href="#" class="d-block fs-4 my-4">IT & Hardware</a>
                                 <p class="text-white mb-4">AAR Enterprises builds with quality and delivers with trust. Strong, reliable!</p>
                                 <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
                             </div>
                             <div class="service-tytle">
                                 <div class="d-flex align-items-center justify-content-start ps-4 w-100">
-                                    <h4>Preconstruction</h4>
+                                    <h4>IT & Hardware</h4>
                                 </div>
                                 <div class="btn-xl-square bg-secondary p-4" style="width: 80px; height: 80px;">
                                     <i class="fas fa-cogs text-primary fa-2x"></i>
