--- a/supply.html
+++ b/supply.html
@@ -43,13 +43,13 @@
 
 
         <!-- Topbar Start -->
-        <div class="container-fluid topbar d-none d-xl-block w-100">
+       <div class="container-fluid topbar d-none d-xl-block w-100">
             <div class="row gx-0 align-items-center" style="height: 45px;">
                 <div class="col-lg-6 text-center text-lg-start mb-lg-0">
                     <div class="d-flex flex-wrap">
-                        <a href="#" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
-                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+01234567890</a>
-                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>Example@gmail.com</a>
+                        <a href="https://maps.app.goo.gl/1FT8EMyBuWbQUijTA" class="text-muted me-4"><i class="fas fa-map-marker-alt text-secondary me-2"></i>Find A Location</a>
+                        <a href="#" class="text-muted me-4"><i class="fas fa-phone-alt text-secondary me-2"></i>+91 9810814521</a>
+                        <a href="#" class="text-muted me-0"><i class="fas fa-envelope text-secondary me-2"></i>aarenterprises07@gmail.com</a>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-end">
@@ -67,11 +67,14 @@
 
 
         <!-- Navbar & Hero Start -->
-        <div class="container-fluid sticky-top px-0">
+       <div class="container-fluid sticky-top px-0">
             <nav class="navbar navbar-expand-lg navbar-dark bg-light py-3 px-4">
-                <a href="index.html" class="navbar-brand p-0">
-                    <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1>
-                    <!-- <img src="img/logo.png" alt="Logo"> -->
+                 <a href="index.html" class="navbar-brand p-0">
+                    <!-- <h1 class="text-secondary display-6"><i class="fas fa-city text-primary me-3"></i>Constra</h1> -->
+                    <!-- <img src="./img/ARREL.png" alt="Logo" style="height:80px; width:auto;"> -->
+                     <img src="./img/AAR Enterprises Logonew.png" alt="Logo" 
+     style="height:80px; width:auto; border-radius:15%;">
+
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
@@ -79,19 +82,19 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto pt-2 pt-lg-0">
                         <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
+                        <a href="about.html" class="nav-item nav-link active">About</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <a href="project.html" class="nav-item nav-link">Projects</a>
-                        <div class="nav-item dropdown active">
-                            <a href="#" class="nav-link dropdown-toggle text-dark active" data-bs-toggle="dropdown">Pages</a>
+                        <!-- <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle text-dark" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu m-lg-0">
                                 <a href="feature.html" class="dropdown-item">Our Features</a>
-                                <a href="blog.html" class="dropdown-item active">Our Blog</a>
+                                <a href="blog.html" class="dropdown-item">Our Blog</a>
                                 <a href="team.html" class="dropdown-item">Our Team</a>
                                 <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
-                        </div>
+                        </div> -->
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <div class="d-flex align-items-center flex-nowrap pt-3  pt-lg-0 ms-lg-2">
@@ -123,7 +126,7 @@
         <!-- Modal Search End -->
 
         <!-- Header Start -->
-        <div class="container-fluid bg-breadcrumb">
+        <!-- <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
                 <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Our News & Blog</h4>
                 <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
@@ -132,65 +135,61 @@
                     <li class="breadcrumb-item active text-secondary">News & Blog</li>
                 </ol>    
             </div>
-        </div>
+        </div> -->
         <!-- Header End -->
 
         <!-- Blog Start -->
-        <div class="container-fluid blog py-5">
-            <div class="container py-5">
-                <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <p class="text-uppercase text-secondary fs-5 mb-0">News & Blog</p>
-                    <h2 class="display-4 text-capitalize mb-3">Our latest news post and articles?</h2>
-                </div>
-                <div class="row g-4">
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="blog-item h-100">
-                            <div class="blog-img">
-                                <img src="img/blog-1.jpg" class="img-fluid w-100" alt="">
-                            </div>
-                            <div class="blog-content p-4">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <p class="mb-0"><i class="fa fa-calendar-check text-secondary me-1"></i> 26 April 2025</p>
-                                    <p class="mb-0"><i class="fa fa-user text-secondary me-1"></i> Admin</p>
-                                </div>
-                                <a href="#" class="h4 d-block mb-4">Emerging Tech Trends What to in the Next Decade</a>
-                                <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
-                        <div class="blog-item h-100">
-                            <div class="blog-img">
-                                <img src="img/blog-2.jpg" class="img-fluid w-100" alt="">
-                            </div>
-                            <div class="blog-content p-4">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <p class="mb-0"><i class="fa fa-calendar-check text-secondary me-1"></i> 26 April 2025</p>
-                                    <p class="mb-0"><i class="fa fa-user text-secondary me-1"></i> Admin</p>
-                                </div>
-                                <a href="#" class="h4 d-block mb-4">Emerging Tech Trends What to in the Next Decade</a>
-                                <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
-                        <div class="blog-item h-100">
-                            <div class="blog-img">
-                                <img src="img/blog-3.jpg" class="img-fluid w-100" alt="">
-                            </div>
-                            <div class="blog-content p-4">
-                                <div class="d-flex justify-content-between mb-3">
-                                    <p class="mb-0"><i class="fa fa-calendar-check text-secondary me-1"></i> 26 April 2025</p>
-                                    <p class="mb-0"><i class="fa fa-user text-secondary me-1"></i> Admin</p>
-                                </div>
-                                <a href="#" class="h4 d-block mb-4">Emerging Tech Trends What to in the Next Decade</a>
-                                <a class="btn btn-secondary py-2 px-4" href="#">Read More</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+       <div class="container-fluid  bg-light">
+  <div class="container py-5">
+    <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
+      <p class="text-uppercase text-secondary fs-5 mb-0">Our Services</p>
+      <h2 class="display-4 text-capitalize mb-3">Supply Management Solutions</h2>
+      <p class="text-muted">We provide end-to-end supply chain management, ensuring efficiency, transparency, and cost-effectiveness in every step.</p>
+    </div>
+
+    <div class="row g-4">
+      <!-- Card 1 -->
+      <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
+        <div class="card border-0 shadow h-100 rounded-3 overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1627915589334-14a3c3e3a741?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OHx8c3VwcGx5JTIwY2hhaW4lMjBtYW5hZ2VtZW50fGVufDB8fDB8fHww=80" 
+               class="card-img-top" alt="Warehouse Management">
+          <div class="card-body p-4">
+            <h4 class="card-title mb-3">Warehouse Management</h4>
+            <p class="card-text text-muted">Efficient warehouse operations with real-time tracking, inventory control, and smart storage solutions.</p>
+            <a href="warehouse.html" class="btn btn-secondary py-2 px-4">Learn More</a>
+          </div>
         </div>
+      </div>
+
+      <!-- Card 2 -->
+      <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
+        <div class="card border-0 shadow h-100 rounded-3 overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1726776230751-183496c51f00?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8c3VwcGx5JTIwY2hhaW4lMjBtYW5hZ2VtZW50fGVufDB8fDB8fHww=80" 
+               class="card-img-top" alt="Logistics & Transportation">
+          <div class="card-body p-4">
+            <h4 class="card-title mb-3">Logistics & Transportation</h4>
+            <p class="card-text text-muted">Reliable transportation and distribution network ensuring timely delivery across all regions.</p>
+            <a href="logistics.html" class="btn btn-secondary py-2 px-4">Learn More</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Card 3 -->
+      <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.6s">
+        <div class="card border-0 shadow h-100 rounded-3 overflow-hidden">
+          <img src="https://plus.unsplash.com/premium_photo-1661872962404-b181aa068d42?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8c3VwcGx5JTIwY2hhaW4lMjBtYW5hZ2VtZW50fGVufDB8fDB8fHww=80" 
+               class="card-img-top" alt="Inventory Control">
+          <div class="card-body p-4">
+            <h4 class="card-title mb-3">Inventory Control</h4>
+            <p class="card-text text-muted">Advanced tools for monitoring stock levels, demand forecasting, and minimizing supply chain risks.</p>
+            <a href="inventory.html" class="btn btn-secondary py-2 px-4">Learn More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
         <!-- Blog End -->
 
         <!-- Footer Start -->
@@ -201,7 +200,7 @@
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
                                 <h4 class="text-white mb-4">Newsletter</h4>
-                                <p class="mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
+                                <p class="mb-3">“AAR Enterprises – Constructing dreams with strength.”</p>
                                 <div class="position-relative mx-auto">
                                     <input class="form-control w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
                                     <button type="button" class="btn btn-secondary position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
@@ -236,11 +235,11 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York, USA</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a>
-                            <a href=""><i class="fas fa-phone me-2"></i> +012 345 67890</a>
-                            <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
+                            <a href=""><i class="fa fa-map-marker-alt me-2"></i> 504 A-Block  4th Floor Gagan Apartment,Patna(Bihar)</a>
+                            <a href=""><i class="fas fa-envelope me-2"></i>aarenterprises07@gmail.com</a>
+                            <!-- <a href=""><i class="fas fa-envelope me-2"></i> info@example.com</a> -->
+                            <a href=""><i class="fas fa-phone me-2"></i>+91 9810814521</a>
+                            <!-- <a href="" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a> -->
                             <div class="footer-btn d-flex align-items-center">
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-facebook-f text-white"></i></a>
                                 <a class="btn btn-secondary btn-md-square me-2" href=""><i class="fab fa-twitter text-white"></i></a>
@@ -260,13 +259,13 @@
             <div class="container">
                 <div class="row g-4 align-items-center">
                     <div class="col-md-6 text-center text-md-start mb-md-0">
-                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
+                        <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>AAR Enterprises</a>, All right reserved.</span>
                     </div>
                     <div class="col-md-6 text-center text-md-end text-body">
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
+                        Designed By <a class="border-bottom text-white" href="https://adivioinfotech.com">Adivio infotech</a>
                     </div>
                 </div>
             </div>
